--- a/style.css
+++ b/style.css
@@ -85,6 +85,55 @@ body{
     margin: 0 auto;
 }
 
+.parametro-senha-botoes{
+    display: flex;
+    justify-content: center;
+}
+
+.parametro-senha__texto{
+    padding: 24px;
+    border: 2px solid var(--borda);
+    margin: 0;
+    font-size: 24px;
+}
+
+.parametro-senha__botao{
+    background-color: var(--fundo-texto);
+    color: var(--branco);
+    border: 2px solid var(--branco);
+    padding: 24px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
         flex-direction: row;
