--- a/style.css
+++ b/style.css
@@ -106,7 +106,15 @@ body{
     cursor: pointer;
 }
 
+label{
+    font-size: 20px;
+}
 
+.checkbox{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
 
 
 
